@@ -1,5 +1,9 @@
 2008-08-21 Mathieu Blondel <mblondel@svn.gnome.org>
 
+    * test/test_utils.rb: Unit test for the utils.
+
+2008-08-21 Mathieu Blondel <mblondel@svn.gnome.org>
+
     * lib/fantasdic/ui/main_app.rb: Update the search entry font when the
     dictionary menu is changed rather than when the search entry is activated.
 
